--- a/workplace/kiosk/src/main/webapp/resources/css/main.css
+++ b/workplace/kiosk/src/main/webapp/resources/css/main.css
@@ -1,37 +1,13 @@
 @charset "UTF-8";
 
-#topMenu {
-	height: 50px;
-	width: 1400px;
-	margin-bottom: 20px;
-}
-#topMenu ul li {
-	list-style: none;
-	color: white;
-	background-color: #2d2d2d;
-	float: left;
-	line-height: 50px;
-	vertical-align: middle;
-	text-align: center;
-}
-#topMenu .menuLink {
-	text-decoration: none;
-	color: white;
-	display: block;
-	width: 235px;
-	font-size: 25px;
-	font-weight: bold;
-	font-family: "Trebuchet MS", Dotum, Arial;
-}
-#topMenu .menuLink:hover {
-	color: white;
-	background-color: #4d4d4d;
-}
 #pic_group {
 	text-align: center;
 }
 #pic_group .pic {
-	height: 220px;
-	width: 350px;
-	margin: 10px;
+	height: 180px;
+	width: 330px;
+	margin-left: 25px;
+	margin-right: 25px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
