--- a/workplace/kiosk/src/main/webapp/resources/css/popup.css
+++ b/workplace/kiosk/src/main/webapp/resources/css/popup.css
@@ -25,7 +25,7 @@ form {
 	width: 459px;
 }
 
-#submit {
+#payment {
 	width: 127px;
 	height: 48px;
 	text-align: center;
@@ -34,7 +34,7 @@ form {
 	cursor: pointer;
 }
 
-#submit:hover {
+#payment:hover {
 	color: #fff;
 	background-color: #216282;
 	opacity: 0.9;
