--- a/workplace/kiosk/src/main/webapp/resources/css/bottomMenu.css
+++ b/workplace/kiosk/src/main/webapp/resources/css/bottomMenu.css
@@ -2,14 +2,18 @@
 
 #bottomMenu {
 	height: 50px;
-	width: 1260px;
 	margin-top: 20px;
+}
+#bottomMenu ul {
+	height: 50px;
+	width: 1175px;
+	margin: 0 auto;	
 }
 #bottomMenu ul li {
 	list-style: none;
 	color: white;
 	background-color: #2d2d2d;
-	float: right;
+	float: left;
 	line-height: 50px;
 	vertical-align: middle;
 	text-align: center;
@@ -30,5 +34,5 @@ li #menuLink:hover {
 #bottomMenu .whiteSpace {
 	color: white;
 	background-color: white;
-	width: 70px;
+	width: 235px;
 }
