--- a/workplace/kiosk/src/main/webapp/resources/css/popup.css
+++ b/workplace/kiosk/src/main/webapp/resources/css/popup.css
@@ -115,6 +115,17 @@ form {
 	transform: scale(1.0);
 	transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
+
+#list_mom {
+	width: 605px;
+	height: 235px;
+	overflow: scroll;
+}
+
+#list_mom::-webkit-scrollbar {
+	width: 1px;
+}
+
 .list {
 	width: 180px;
 	margin:10px;
@@ -122,6 +133,12 @@ form {
 	float: left;
 	text-align: center;
 }
+
 #first_li {
 	list-style: disc;
+}
+
+.span1 {
+	color: black;
+	font-size: 18px;
 }
